# ipkgmgrsrv

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODOS  config.status  configure  configure.in
dbus/: org.webosinternals.ipkgmgrsrv.service  us.ryanhope.ipkgmgrsrv.service
event.d/: us.ryanhope.ipkgmgrsrv
include/: ipkgmgr.h  ipkgmgrsrv.h  utils.h
include/liblunaservice/: lunaservice.h
src/: ipkgmgr.c  main.c  utils.c
